# piccolo_api

./: .gitignore  .readthedocs.yaml  .travis.yml  CHANGES  CHANGES.rst  CONTRIBUTING.md  README.md  dev-requirements.txt  pyproject.toml  requirements.txt  setup.py  test-requirements.txt
.github/workflows/: codeql.yml  release.yaml  tests.yaml
docs/: doc-requirements.txt  serve_docs.py
docs/source/: conf.py  index.rst  introduction.rst
e2e/: conftest.py  pages.py  test_mfa.py
example_projects/change_password_demo/: README.md  app.py  piccolo_conf.py
example_projects/mfa_demo/: README.md  app.py  main.py  piccolo_conf.py
example_projects/register_demo/: README.md  app.py  piccolo_conf.py  requirements.txt
piccolo_api/: __init__.py  endpoints.py
piccolo_api/audit_logs/: commands.py  piccolo_app.py  tables.py
piccolo_api/change_password/: endpoints.py
piccolo_api/crud/: cursor_pagination.py  endpoints.py  exceptions.py  hooks.py  serializers.py  validators.py
piccolo_api/csp/: middleware.py
piccolo_api/csrf/: middleware.py
piccolo_api/encryption/: providers.py
piccolo_api/endpoints/: auth.py  crud.py  session.py
requirements/: README.md  dev-requirements.txt  doc-requirements.txt  e2e-requirements.txt  readthedocs-requirements.txt  requirements.txt  test-requirements.txt
scripts/: README.md  lint.sh  run-docs.sh  test-postgres.sh  test-sqlite.sh
tests/: piccolo_conf.py  postgres_conf.py  run_tests.sh  serve.py  test-postgres.sh  test-requirements.txt  test-sqlite.sh  test_csp.py  test_csrf.py  test_session.py  utils.py
(+178 files in other folders)
