[tool.poetry]
name = "piccolo-api"
version = "0.42.0"
description = "Utilities for using the Piccolo ORM in ASGI apps, plus essential ASGI middleware such as authentication and rate limiting."
authors = ["dantownsend<dan@dantownsend.co.uk>"]

[tool.black]
line-length = 79
target-version = ['py37', 'py38', 'py39', 'py310']

[tool.isort]
profile = "black"
line_length = 79

[tool.mypy]
[[tool.mypy.overrides]]
module = [
    "asyncpg.pgproto.pgproto",
    "jinja2",
    "uvicorn",
    "jwt",
    "boto3",
    "moto"
]
ignore_missing_imports = true

[tool.coverage.run]
omit = [
    "*/piccolo_app.py",
    "*/piccolo_migrations/*"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "return self.render_template",
    "raise HTTPException",
]